<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".features.search.SearchActivity">

    <ScrollView
        android:id="@+id/setting_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/setting_search_by"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/title_check_box"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/setting_title"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/author_check_box"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/setting_author"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/author_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:background="@android:color/white"
                            android:hint="@string/setting_author"
                            android:imeOptions="actionGo"
                            android:inputType="text"
                            android:maxLines="1"
                            android:paddingLeft="8dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/setting_show_only"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/books_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/setting_book"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/magazine_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/setting_magazine"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/all_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/setting_all"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/setting_results_page"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/results_count_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="8dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/books_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_book_search" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/empty_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="70dp"
            tools:src="@drawable/search_book"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/pages_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/page_previous"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:textColor="@android:color/white"
            app:icon="@drawable/previous_icon"
            app:iconTint="@android:color/white"
            app:iconGravity="textStart"
            android:gravity="center"/>

        <TextView
            android:id="@+id/page_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/page"
            android:gravity="center"
            android:textColor="@android:color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/page_next"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:textColor="@android:color/white"
            app:icon="@drawable/next_icon"
            app:iconTint="@android:color/white"
            app:iconGravity="textStart"
            android:layoutDirection="rtl"
            android:layout_alignParentRight="true"/>

    </LinearLayout>

    <TextView
        android:id="@+id/internet_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textSize="12sp"
        android:text="We're back online!!"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:background="@color/red"
        android:visibility="gone"/>

</LinearLayout>